# fastapi_test_tut

./: .gitignore  README.md  db.sqlite  pyproject.toml
app/: app.py  crud.py  db.py  db_tables.py  dependencies.py  models.py  routers.py  schemas.py
tests/: conftest.py  test_crud.py  test_routers.py
